# email-newsletter

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  spec.yaml  sqlx-data.json
config/: base.toml
migrations/: 20230128155100_create_subscriptions_table.sql  20230320214542_make_status_not_null_in_subscriptions.sql
src/: config.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber.rs  subscriber_email.rs  subscriber_name.rs  subscriber_status.rs
src/routes/: health_check.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
