[package]
name = "email-newsletter"
version = "0.1.0"
edition = "2021"
authors = ["Frank Parejo <francisco.parejo.lopez@gmail.com>"]

[lib]
path = "src/lib.rs"

# Double square brackets is the way you represent an array in TOML's
# In Rust, you can have multiple binaries
[[bin]]
path = "src/main.rs"
name = "email_newsletter"

[dependencies]
actix-web = { version = "4"}
tokio = {version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
config = { version = "0.13.3" }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
chrono = { version = "0.4.23", features = ["serde"] }
log = { version = "0.4" }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = { version = "0.3" }
tracing-log = { version = "0.1" }
secrecy = { version = "0.8", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tracing-actix-web = { version = "0.7" }
# We need this library because of config structs would fail to deserialize integers.
serde-aux = { version = "4" }
unicode-segmentation = { version = "1.10" }
claim = { version = "0.5"}
validator = { version = "0.16" }
fake = { version = "2.5" }
wiremock = { version = "0.5" }
redis = { version = "0.22.3", features = ["tokio-comp"] }
linkify = { version = "0.9" }
rand = { version = "0.8", features = ["std_rng"] }

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]

